<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlayList</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_android">你好，Android</string>
    <string name="hello">Hello</string>
    <string name="jnu">JNU</string>
    <string name="version" tools:ignore="ExtraTranslation">版本</string>
    <string name="change_text">Change Text</string>
    <string name="book_title_text">Title</string>
    <string name="cancel">取消</string>
    <string name="ok_btn">确定</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress">1/10</string>
    <string name="point">+10</string>
    <string name="title">标题</string>
    <string name="score">分数</string>
    <string name="times">次数</string>
    <string name="reward_add">添加奖励</string>
    <string name="overview_i_e">收支总览</string>
    <string name="expenditure">支出</string>
    <string name="income">收入</string>
    <string name="bill_title">账单</string>
    <string name="time">时间</string>
    <string name="surplus">结余</string>
    <string name="today_stats">统计今日</string>
    <string name="this_week_stats">统计本周</string>
    <string name="all_stats">统计所有</string>
    <string name="avatar">头像</string>
    <string name="all_task">管理任务</string>
    <string name="about_me">关于我</string>
    <string name="open_drawer">打开</string>
    <string name="close_drawer">关闭</string>
    <string name="title_activity_task_manager_acvitity">TaskManagerAcvitity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="filter">筛选</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="empty_view">这里什么也没有</string>
    <string name="accumulative">是否可累加</string>
</resources>