<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/purple_500"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:contentPadding="8dp">

        <ImageView
            android:id="@+id/score_log_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/ic_menu"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_log_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/score_log_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/time"
            android:textColor="#757575"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/score_log_score_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_weight="1"
        android:text="@string/income"
        android:textAlignment="textEnd"
        android:textColor="#DD0000" />

</LinearLayout>