<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dip"
    android:longClickable="true"
    android:paddingStart="20dip"
    android:paddingTop="5dp"
    android:paddingEnd="10dip"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/reward_name_text"
        android:layout_width="167dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text="@string/hello"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/reward_progress_text"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/progress"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/reward_score_text"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/point"
        android:textColor="#0099FD"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

</LinearLayout>